--- a/Lab2/index.html
+++ b/Lab2/index.html
@@ -9,36 +9,43 @@
 <body>
 <main>
 
-    <audio src="sounds/hihat.wav" controls data-sound="hihat"></audio>
-    <audio src="sounds/clap.wav" controls data-sound="clap"></audio>
-    <audio src="sounds/boom.wav" controls data-sound="boom"></audio>
-    <audio src="sounds/kick.wav" controls data-sound="kick"></audio>
-    <audio src="sounds/openhat.wav" controls data-sound="openhat"></audio>
-    <audio src="sounds/ride.wav" controls data-sound="ride"></audio>
-    <audio src="sounds/snare.wav" controls data-sound="snare"></audio>
-    <audio src="sounds/tink.wav" controls data-sound="tink"></audio>
-    <audio src="sounds/tom.wav" controls data-sound="tom"></audio>
 
-    <div id="channels">
-        <div class="channel">
-            <button id="recordChannel1" onclick="startRecording(event,1)">Record</button>
-            <button id="stopChannel1"  onclick="stopRecording(1)" disabled>Stop</button>
-            <button id="playChannel1" onclick="playRecording(1)" disabled>Play</button>
+    <div>
+        <div default-value="A">
+            <audio src="sounds/hihat.wav" controls data-sound="hihat"></audio>
         </div>
-        <div class="channel">
-            <button id="recordChannel2" onclick="startRecording(event,2)">Record</button>
-            <button id="stopChannel2" onclick="stopRecording(2)" disabled>Stop</button>
-            <button id="playChannel2" onclick="playRecording(2)" disabled>Play</button>
+        <div class="kanal-button">
+            <audio src="sounds/clap.wav" controls data-sound="clap"></audio>
+            <audio src="sounds/boom.wav" controls data-sound="boom"></audio>
+            <audio src="sounds/kick.wav" controls data-sound="kick"></audio>
+            <audio src="sounds/openhat.wav" controls data-sound="openhat"></audio>
+            <audio src="sounds/ride.wav" controls data-sound="ride"></audio>
+            <audio src="sounds/snare.wav" controls data-sound="snare"></audio>
+            <audio src="sounds/tink.wav" controls data-sound="tink"></audio>
+            <audio src="sounds/tom.wav" controls data-sound="tom"></audio>
         </div>
-        <div class="channel">
-            <button id="recordChannel3" onclick="startRecording(event,3)">Record</button>
-            <button id="stopChannel3" onclick="stopRecording(3)" disabled>Stop</button>
-            <button id="playChannel3" onclick="playRecording(3)" disabled>Play</button>
+    </div>
+
+    <div class="kanaly">
+        <div class="kanal">
+            <button id="Kanal1" onclick="startRecording(event,1)">Start recording Channel 1</button>
+            <button id="stopKanal1" onclick="stopRecording(1)">Stop recording Channel 1</button>
+            <button id="playKanal1" onclick="playRecording(1)">Play Channel 1</button>
         </div>
-        <div class="channel">
-            <button id="recordChannel4" onclick="startRecording(event,4)">Record</button>
-            <button id="stopChannel4" onclick="stopRecording(4)" disabled>Stop</button>
-            <button id="playChannel4" onclick="playRecording(4)" disabled>Play</button>
+        <div class="kanal">
+            <button id="Channel2" onclick="startRecording(event,2)">Start recording Channel 2</button>
+            <button id="stopChannel2" onclick="stopRecording(2)">Stop recording Channel 2</button>
+            <button id="playChannel2" onclick="playRecording(2)">Play Channel 2</button>
+        </div>
+        <div class="kanal">
+            <button id="Kanal3" onclick="startRecording(event,3)">Start recording Channel 3</button>
+            <button id="stopKanal3" onclick="stopRecording(3)">Stop recording Channel 3</button>
+            <button id="playKanal3" onclick="playRecording(3)">Play Channel 3</button>
+        </div>
+        <div class="kanal">
+            <button id="Kanal4" onclick="startRecording(event,4)">Start recording Channel 4</button>
+            <button id="stopKanal4" onclick="stopRecording(4)">Stop recording Channel 4</button>
+            <button id="playKanal4" onclick="playRecording(4)">Play Channel 4</button>
         </div>
     </div>
 </main>
