--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -8,11 +8,11 @@
     <link href="../../node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <title>Project 1</title>
 </head>
-<body style="background-color: lightblue">
+<body style="background-color: grey">
 <div class="content">
     <div >
-        <label class="inputCount"><b>Number of inputs:</b></label>
-        <input class="inputCount" type="text" id="numberofinputs" min="0" placeholder="Enter a value">
+        <label class="inputCount"><b>Ile liczb:</b></label>
+        <input class="inputCount" type="text" id="numberofinputs" min="0" placeholder="Wartość">
         <hr>
         <div id="inputs-container" class="inputs-container">
         </div>
