--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="index.css" rel="stylesheet">
-    <link rel="stylesheet" href="index.css">
-    <link href="../../node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+<!--    <link href="index.css" rel="stylesheet">-->
+<!--    <link rel="stylesheet" href="index.css">-->
+<!--    <link href="../../node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">-->
     <title>Project 1</title>
 </head>
 <body style="background-color: grey">
@@ -16,7 +16,7 @@
         <hr>
         <div id="inputs-container" class="inputs-container">
         </div>
-        <button id="remove-button" hidden="true">Remove</button>
+        <button id="remove-button" hidden="true" >Remove</button>
     </div>
 
 
